fix color contrast issue

--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@
   --navy: #17050F;
   --blue: #082840;
   --white: #fff;
-  --link: #367ad1;
+  --link: #2D6FC3;
   --block: #f2f2fc;
   --darkblock: #191923;
 }
